test/errors/or_non_bool.sl
# expect: COMPERROR
true or 1;
